Release Notes for the event package
-----------------------------------

event-R4-2-1: 2016-04-04 K. Kim
      * To avoid undefine symbol for "int_showme, dbuf_showme and event_showme" in RTEMS
        define dummy variable for RTMES. These variables has been introduce for special debugging for linux/linuxRT 

event-R4-2-0: 2015-08-18 K. Kim
      * Include Tomo's EMCOR EVR support
      * add up debugging feature for interrupt, mapping ram, event FIFO and data buffer handling

event-R4-1-6: 2015-02-18 K. Kim
      * consider for 360Hz resolution timestamp
        allow to set  TS1ST=0, TS2ND=0 for 360Hz resolution timestamp

event-R4-1-5: 2015-01-12  K. Kim

      * fix unstable fiducial rate calculation due to the race condition between the rate calculation and the 360Hz processing
      * use latched clock counter for ErGetTicks()

      * Change to support epics R3.15
      * Fix autosave info field typo: 29-Dec-2014 (E. Williams) 
        * can't use commas as a delimiter for autosave info fields; must use spaces

      * Bug fix in BSA processing: 28-Jan-2015 K. Kim - retagging
        -Check if the EDEF has initialized and wipe out old values if it has.
        -Bug fix in read_bsa()
        

event-R4-1-4: 2014-12-4 K. Kim
      * register evrInitialize() function into iocsh
	M evrSupport/src/drvEvr.c
	M evrSupport/src/drvEvr.dbd

event-R4-1-3: 2014-06-20 K. Kim
      *Automatic configuration for EVG-200 and EVG-230
         EVG-230 (firmware 0x4xx) has different definition for clock confiugration register.
         the new software recongize hardware version and configure the clock configuration register correctly.

event-R4-1-2:
      * Add ErConfigureWithSlot to add starting VME slot number to 
	look for EVRs.
event-R4-1-1:
      Removed SYS=SYS1 as a default value. This forces us to define SYS,
      and pay attention to its definition. The IOC will break on startup
      with useful error messages rather than behaving oddly when SYS is
      undefined.