@@ -16,11 +16,12 @@ record(bsa, "$(DEV):$(SECN)$(MDID)") {
   field(PREC, "$(PREC)")
   field(ADEL, "$(ADEL)")
   field(MDEL, "-1")
-  field(TSE, "-1")
+  field(TSE, "-2")
   field(FLNK, "$(DEV):$(SECN)HST$(MDID)")
   field(VRES, "$(DEV):$(SECN)HST$(MDID).RES")
   field(CRES, "$(DEV):$(SECN)CNTHST$(MDID).RES")
   field(RRES, "$(DEV):$(SECN)RMSHST$(MDID).RES")
+  field(PRES, "$(DEV):$(SECN)PIDHST$(MDID).RES")
 }
 
 record(compress, "$(DEV):$(SECN)HST$(MDID)") {
@@ -55,6 +56,17 @@ record(compress, "$(DEV):$(SECN)RMSHST$(MDID)") {
   field(HOPR, "$(HOPR)")
   field(LOPR, "$(LOPR)")
   field(EGU, "$(EGU)")
+  field(TSEL, "$(DEV):$(SECN)$(MDID).TIME")
+  field(FLNK, "$(DEV):$(SECN)PIDHST$(MDID)")
+}
+ 
+record(compress, "$(DEV):$(SECN)PIDHST$(MDID)") {
+  field(DESC, "HST Pulse ID-EDEF $(DESC)")
+  field(INP, "$(DEV):$(SECN)$(MDID).PID")
+  field(ALG, "Circular Buffer")
+  field(NSAM, "$(NSAM)")
+  field(HOPR, "131039")
+  field(LOPR, "0")
   field(TSEL, "$(DEV):$(SECN)$(MDID).TIME")
 }
 
