@@ -1,6 +1,11 @@
 Release Notes for the event package
 -----------------------------------
 
+event-R4-2-2: 2016-05-17 C. Bianchini
+      * Add Pulse ID compress record in BSA. (This includes changes in bsaEdefAvg.d)
+      * Add NAN values when the data are not available for a specific pulse ID
+      * move the square calculation for rms in a lower priority function
+
 event-R4-2-1: 2016-04-04 K. Kim
       * To avoid undefine symbol for "int_showme, dbuf_showme and event_showme" in RTEMS
         define dummy variable for RTMES. These variables has been introduce for special debugging for linux/linuxRT 
